--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,84 @@
+# ========================================
+# NETLIFY CONFIGURATION - Ora Shel Torah
+# ========================================
+
 [build]
+  # Dossier contenant les fonctions serverless
+  functions = "netlify/functions"
+  
+  # Dossier de publication (racine du projet)
   publish = "."
+  
+  # Pas de commande de build nécessaire (site statique)
   command = ""
-  functions = ""
 
 [build.environment]
+  # Version Node.js pour les fonctions
   NODE_VERSION = "18"
 
+# ========================================
+# REDIRECTIONS
+# ========================================
+# Rediriger www vers non-www (canonical URL)
+# Force HTTPS et redirection permanente (301)
 [[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+  from = "https://www.orasheltorah.fr/*"
+  to = "https://orasheltorah.fr/:splat"
+  status = 301
+  force = true
+
+# Rediriger /index.html vers / (URL canonique)
+[[redirects]]
+  from = "/index.html"
+  to = "/"
+  status = 301
+
+# ========================================
+# HEADERS DE SÉCURITÉ
+# ========================================
+# Appliqués à tous les fichiers
+[[headers]]
+  for = "/*"
+  
+  [headers.values]
+    # Empêcher l'affichage dans une iframe (protection contre clickjacking)
+    X-Frame-Options = "DENY"
+    
+    # Empêcher le MIME sniffing (protection contre XSS)
+    X-Content-Type-Options = "nosniff"
+    
+    # Activer la protection XSS du navigateur
+    X-XSS-Protection = "1; mode=block"
+    
+    # Contrôle de la politique de référent
+    Referrer-Policy = "strict-origin-when-cross-origin"
+
+# ========================================
+# HEADERS DE CACHE
+# ========================================
+# Cache long terme pour les images (1 an)
+[[headers]]
+  for = "/images/*"
+  
+  [headers.values]
+    Cache-Control = "public, max-age=31536000"
+
+# Cache pour les vidéos
+[[headers]]
+  for = "/videos/*"
+  
+  [headers.values]
+    Cache-Control = "public, max-age=31536000"
+
+# Cache pour les fichiers CSS et JS
+[[headers]]
+  for = "/css/*"
+  
+  [headers.values]
+    Cache-Control = "public, max-age=31536000"
+
+[[headers]]
+  for = "/js/*"
+  
+  [headers.values]
+    Cache-Control = "public, max-age=31536000"
