--- a/netlify.toml
+++ b/netlify.toml
@@ -70,15 +70,15 @@
   [headers.values]
     Cache-Control = "public, max-age=31536000"
 
-# Cache pour les fichiers CSS et JS
+# Cache pour les fichiers CSS et JS (1 semaine)
 [[headers]]
   for = "/css/*"
   
   [headers.values]
-    Cache-Control = "public, max-age=31536000"
+    Cache-Control = "public, max-age=604800"
 
 [[headers]]
   for = "/js/*"
   
   [headers.values]
-    Cache-Control = "public, max-age=31536000"
+    Cache-Control = "public, max-age=604800"
